[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-play"
version = "0.1.0"
description = "Asset-Play Screener — quantify hidden-asset value (含み資産) of Korean listed companies via NAV gap analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "asset-play" }]
keywords = ["finance", "korea", "dart", "krx", "nav", "valuation", "hidden-asset"]

dependencies = [
    "pydantic>=2.5",
    "pandas>=2.0",
    "requests>=2.28",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# External market-data adapters (KRX scraping libs). Optional: the KrxClient
# degrades to an injected PriceProvider when these are not installed.
krx = ["finance-datareader>=0.9", "pykrx>=1.0"]
# Convenience DART/notes parsers. The bundled DartClient uses `requests`
# directly, so these are not required — provided for advanced note parsing.
dart = ["OpenDartReader>=0.2", "dart-fss>=0.4"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
asset-play = "asset_play.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asset_play = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["asset_play"]
branch = true
